--- a/locale/fr/index.json
+++ b/locale/fr/index.json
@@ -9,6 +9,6 @@
     "L10N_PROMPT_NEW_SEARCH": "Voulez vous faire une nouvelle recherche ?",
     "L10N_YES": "Oui",
     "L10N_NO": "Non",
-    "L10N_MAME_TITLE": "Mame Smart Database",
+    "L10N_MAME_TITLE": "Mame Smart DataBase",
     "L10N_MAME_DESCRIPTION": "MAME (Multiple Arcade Machine Emulator) est un émulateur de jeux d'arcade. La liste des jeux est telle qu'il est considéré comme une sorte de grande bibliothèque ou de 'mémoire' du jeu d'arcade. Cette application répertorie les fiches des jeux (ROMS) pour une version de MAME donnée."
 }
