--- a/locale/fr/index.json
+++ b/locale/fr/index.json
@@ -7,17 +7,20 @@
     "L10N_PROMPT_GAME_NAME": "Quel est le nom du jeu ?",
     "L10N_NO_RESULT": "Désolé, je n'ai rien trouvé :-(",
     "L10N_PROMPT_NEW_SEARCH": "Voulez vous faire une nouvelle recherche ?",
+    "L10N_PROMPT_LANGUAGE": "Quelle est votre langue préférée ?",
+    "L10N_LOCALE_UPDATED": "Votre langue préférée est maintenant le Français",
     "L10N_YES": "Oui",
     "L10N_NO": "Non",
     "L10N_MAME_TITLE": "Mame Smart DataBase",
     "L10N_MAME_DESCRIPTION": "MAME (Multiple Arcade Machine Emulator) est un émulateur de jeux d'arcade. La liste des jeux est telle qu'il est considéré comme une sorte de grande bibliothèque ou de 'mémoire' du jeu d'arcade. Cette application répertorie les fiches des jeux (ROMS) pour une version de MAME donnée.",
     "L10N_GAMES_FOUND": "J'ai trouvé {0} jeux, je vous affiche les {1} plus pertinents.",
-    "L10N_GOODBYE": "Merci. A plus !",
+    "L10N_REGEXP_GOODBYE": "(au revoir)",
+    "L10N_SEE_YOU_LATER": "A plus !",
     "L10N_REGEXP_FIND_GAME": "(trouver|jouer|rechercher)",
     "L10N_REGEXP_HELP": "(aide)",
     "L10N_REGEXP_INFO": "(info|information)",
-    "L10N_REGEXP_GOODBYE": "(au revoir|a plus)",
     "L10N_REGEXP_CANCEL": "(annuler)",
+    "L10N_REGEXP_CHANGE_LANGUAGE": "(changer.*langue)",
     "L10N_NO_CONTEXTUAL_HELP": "Pour le coup je ne sais pas comment vous aider...",
     "L10N_CONFIRM_CANCEL": "Etes-vous sur de vouloir annuler ?"
 }
